--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,7 @@
   "name": "node-token-jwt",
   "main": "server.js",
   "dependencies": {
+    "argv": "0.0.2",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
