--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-moment": "^0.7.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-scroll-into-view-if-needed": "^2.1.6",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
