--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.6",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "nodemailer": "^4.6.8"
   }
 }
