--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.7.3",
     "moment": "^2.22.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.1",
+    "react-chartjs-2": "^2.7.4",
+    "react-dom": "^16.6.1",
     "react-materialize": "^1.1.2",
     "react-moment": "^0.7.0",
     "react-router-dom": "^4.2.2",
