--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "email-validator": "^1.1.1",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.0.6",
     "morgan": "^1.9.0",
     "nodemailer": "^4.6.8"
